--- a/src/index.html
+++ b/src/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
   <script src="main.js"></script>
+  <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
 </body>
 </html>
