--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,10 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Roostagram!</title>
-  <link rel="stylesheet" href="styles/app.css">
+  <link rel="stylesheet" href="/styles/app.css">
 </head>
 <body>
-  <script src="main.js"></script>
+  <script src="/main.js"></script>
   <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
 </body>
 </html>
