--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,10 @@
   <link rel="stylesheet" href="/styles/app.css">
 </head>
 <body>
+  <script src="/bower_components/jquery/dist/jquery.min.js"></script>
+  <script src="/bower_components/lodash/dist/lodash.min.js"></script>
+  <script src="/bower_components/backbone/backbone.js"></script>
+
   <script src="/main.js"></script>
   <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
 </body>
