--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
   <script src="/bower_components/lodash/dist/lodash.min.js"></script>
   <script src="/bower_components/backbone/backbone.js"></script>
 
+  <script src="/modules/photo.js"></script>
   <script src="/main.js"></script>
   <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
 </body>
