--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,9 @@
   <script src="/bower_components/backbone/backbone.js"></script>
 
   <script src="/modules/photo.js"></script>
+  <script src="/modules/view.js"></script>
   <script src="/main.js"></script>
   <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
+
 </body>
 </html>
