--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
 
+  <div id="app"></div>
+
   <script src="/bower_components/requirejs/require.js" data-main="/requirejs-config"></script>
 
   <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
