Add tests for BaseView module
...and remove the temporary "tautology" test file.

--- a/test/unit/index.html
+++ b/test/unit/index.html
@@ -16,7 +16,7 @@
 
     require(['util/require-tests'], function(requireTests) {
       requireTests([
-        'tests/tautology'
+        'tests/base-view'
       ], function() {
         mocha.run();
       });
