--- a/test/unit/index.html
+++ b/test/unit/index.html
@@ -17,7 +17,8 @@
 
     require(['util/require-tests'], function(requireTests) {
       requireTests([
-        'tests/base-view'
+        'tests/base-view',
+        'tests/base-layout'
       ], function() {
         mocha.run();
       });
