add additional socialmedia links

--- a/index.html
+++ b/index.html
@@ -75,7 +75,9 @@
         <li><a
           href="http://bocoup-education.github.io/roost-chicago-2014-slides/">All
           Slides</a></li>
-        <li><a href="#">Roostagram on GitHub</a></li>
+        <li><a href="http://www.hipchat.com/gHIPRJSve">Roost HipChat Room</a></li>
+        <li><a href="https://twitter.com/search?f=realtime&q=%23RoostChicago">#RoostChicago on Twitter</a></li>
+        <li><a href="https://github.com/bocoup-education/roost-chicago-2014-app">Roostagram on GitHub</a></li>
       </ul>
     </section>
     <section id="slides-and-code">
