update ben's links

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
         </li>
         <li>
           <h3>Improving Your Styling Workflow</h3><a
-            href="http://bocoup-education.github.io/roost-chicago-2014-slides/11.intro_to_stylus.html"
+            href="http://bocoup-education.github.io/roost-chicago-2014-slides/11.improving_your_styling_workflow.html"
             class="download">Slides</a><a
             href="https://github.com/bocoup-education/roost-chicago-2014-app/archive/09-stylus.zip"
             class="download">Completed Code</a>
@@ -259,7 +259,7 @@
         </li>
         <li>
           <h3>Optimizing the Application</h3><a
-            href="http://bocoup-education.github.io/roost-chicago-2014-slides/16.optimization.html"
+            href="http://bocoup-education.github.io/roost-chicago-2014-slides/16.optimizing_the_application.html"
             class="download">Slides1</a><a
             href="http://bocoup-education.github.io/roost-chicago-2014-slides/17.deployment.html"
             class="download">Slides2</a><a
