Update course page - Add Ben's git jump script - Move Wiring it Together to Day 2

--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
         <li><a href="http://www.hipchat.com/gHIPRJSve">Roost HipChat Room</a></li>
         <li><a href="https://twitter.com/search?f=realtime&q=%23RoostChicago">#RoostChicago on Twitter</a></li>
         <li><a href="https://github.com/bocoup-education/roost-chicago-2014-app">Roostagram on GitHub</a></li>
+        <li><a href="https://github.com/cowboy/dotfiles/blob/master/bin/git-jump">Cowboy's Git Jump</a></li>
       </ul>
     </section>
     <section id="slides-and-code">
@@ -169,6 +170,9 @@
             pages we've created, so we'll wire up our client-side URL
             routing.</p>
         </li>
+      </ol>
+      <h3>Day 2</h3>
+      <ol>
         <li>
           <h3>Building the App, Part 5: Wiring it Together</h3><a
             href="http://bocoup-education.github.io/roost-chicago-2014-slides/09.wiring_and_layout.html"
@@ -180,9 +184,6 @@
             We'll finish up the day by refactoring our current codebase to keep
             things DRY (Don't Repeat Yourself).</p>
         </li>
-      </ol>
-      <h3>Day 2</h3>
-      <ol>
         <li>
           <h3>Recap</h3>
           <p>What the heck happened yesterday? We'll recap the high points and
